# parallel_thread_in_c

./: CMakeLists.txt  Makefile  README.md  c_parallel  main.c  main_t1.c  task.sh
src/: main.c
